--- a/w.html
+++ b/w.html
@@ -14,10 +14,10 @@
 <tr><th>Marluxia</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
 <tr><th>Redsox</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
 <tr><th>SquonK</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
-<tr><th>Tae-Ju</th><th>1</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">4</span> <span style="color: orange;">4</span> <span style="color: blue;">3</span> <br><span style="color: darkgreen;">5</span> <span style="color: darkyellow;">5</span> </td><td>   <br>  </td><td>   <br>  </td></tr>
+<tr><th>Tae-Ju</th><th>2</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">4</span> <span style="color: orange;">4</span> <span style="color: blue;">3</span> <br><span style="color: darkgreen;">5</span> <span style="color: darkyellow;">5</span> </td><td>   <br>  </td><td><span style="color: red;">6</span> <span style="color: orange;">8</span> <span style="color: blue;">3</span> <br><span style="color: darkgreen;">5</span> <span style="color: darkyellow;">5</span> </td></tr>
 <tr><th>TymGiu</th><th>2</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">6</span> <span style="color: orange;">6</span> <span style="color: blue;">7</span> <br><span style="color: darkgreen;">5</span> <span style="color: darkyellow;">5</span> </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">5</span> <span style="color: orange;">4</span> <span style="color: blue;">6</span> <br><span style="color: darkgreen;">5</span> <span style="color: darkyellow;">6</span> </td></tr>
 <tr><th>zlogjzeigfzgjpzeige</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
-<tr><th>_Jagged_Edge_</th><th>1</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">5</span> <span style="color: orange;">6</span> <span style="color: blue;">4</span> <br><span style="color: darkgreen;">5</span> <span style="color: darkyellow;">4</span> </td><td>   <br>  </td><td>   <br>  </td></tr>
+<tr><th>_Jagged_Edge_</th><th>2</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">4</span> <span style="color: orange;">2</span> <span style="color: blue;">7</span> <br><span style="color: darkgreen;">5</span> <span style="color: darkyellow;">5</span> </td><td><span style="color: red;">5</span> <span style="color: orange;">6</span> <span style="color: blue;">4</span> <br><span style="color: darkgreen;">5</span> <span style="color: darkyellow;">4</span> </td><td>   <br>  </td><td>   <br>  </td></tr>
 </table>
 
 
@@ -32,22 +32,22 @@
 <table class="wikitable" border="1" style="text-align: center; width: 100%">
 <tr><th></th><th colspan=2>+ = alea</th><th></th><th colspan=2>mm ma elem</th><th></th><th colspan=2>mp + = alea</th><th></th><th colspan=2>mp bat</th><th></th><th colspan=2>mkc elem bat</th></tr>
 <tr><th>#</th><th>Player</th><th>Points</th><th></th><th>Player</th><th>Points</th><th></th><th>Player</th><th>Points</th><th></th><th>Player</th><th>Points</th><th></th><th>Player</th><th>Points</th></tr>
-<tr><th>0</th><td>TymGiu</td><td>11</td><th></th><td>TymGiu</td><td>10</td><th></th><td>TymGiu</td><td>13</td><th></th><td>TymGiu</td><td>10</td><th></th><td>TymGiu</td><td>11</td></tr>
-<tr><th>1</th><td>_Jagged_Edge_</td><td>5</td><th></th><td>_Jagged_Edge_</td><td>6</td><th></th><td>_Jagged_Edge_</td><td>4</td><th></th><td>Tae-Ju</td><td>5</td><th></th><td>Tae-Ju</td><td>5</td></tr>
-<tr><th>2</th><td>Tae-Ju</td><td>4</td><th></th><td>Tae-Ju</td><td>4</td><th></th><td>Tae-Ju</td><td>3</td><th></th><td>_Jagged_Edge_</td><td>5</td><th></th><td>_Jagged_Edge_</td><td>4</td></tr>
-<tr><th>3</th><td>ClaXus</td><td>0</td><th></th><td>ClaXus</td><td>0</td><th></th><td>ClaXus</td><td>0</td><th></th><td>ClaXus</td><td>0</td><th></th><td>ClaXus</td><td>0</td></tr>
-<tr><th>4</th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td></tr>
-<tr><th>5</th><td>Didier_Raoult</td><td>0</td><th></th><td>Didier_Raoult</td><td>0</td><th></th><td>Didier_Raoult</td><td>0</td><th></th><td>Didier_Raoult</td><td>0</td><th></th><td>Didier_Raoult</td><td>0</td></tr>
-<tr><th>6</th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td></tr>
-<tr><th>7</th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td></tr>
-<tr><th>8</th><td>Gregsto11</td><td>0</td><th></th><td>Gregsto11</td><td>0</td><th></th><td>Gregsto11</td><td>0</td><th></th><td>Gregsto11</td><td>0</td><th></th><td>Gregsto11</td><td>0</td></tr>
-<tr><th>9</th><td>Huey</td><td>0</td><th></th><td>Huey</td><td>0</td><th></th><td>Huey</td><td>0</td><th></th><td>Huey</td><td>0</td><th></th><td>Huey</td><td>0</td></tr>
-<tr><th>10</th><td>Inoubliable-Squall</td><td>0</td><th></th><td>Inoubliable-Squall</td><td>0</td><th></th><td>Inoubliable-Squall</td><td>0</td><th></th><td>Inoubliable-Squall</td><td>0</td><th></th><td>Inoubliable-Squall</td><td>0</td></tr>
-<tr><th>11</th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td></tr>
-<tr><th>12</th><td>Marluxia</td><td>0</td><th></th><td>Marluxia</td><td>0</td><th></th><td>Marluxia</td><td>0</td><th></th><td>Marluxia</td><td>0</td><th></th><td>Marluxia</td><td>0</td></tr>
-<tr><th>13</th><td>Redsox</td><td>0</td><th></th><td>Redsox</td><td>0</td><th></th><td>Redsox</td><td>0</td><th></th><td>Redsox</td><td>0</td><th></th><td>Redsox</td><td>0</td></tr>
-<tr><th>14</th><td>SquonK</td><td>0</td><th></th><td>SquonK</td><td>0</td><th></th><td>SquonK</td><td>0</td><th></th><td>SquonK</td><td>0</td><th></th><td>SquonK</td><td>0</td></tr>
-<tr><th>15</th><td>zlogjzeigfzgjpzeige</td><td>0</td><th></th><td>zlogjzeigfzgjpzeige</td><td>0</td><th></th><td>zlogjzeigfzgjpzeige</td><td>0</td><th></th><td>zlogjzeigfzgjpzeige</td><td>0</td><th></th><td>zlogjzeigfzgjpzeige</td><td>0</td></tr>
+<tr><th>1</th><td>TymGiu</td><td>11</td><th></th><td>Tae-Ju</td><td>12</td><th></th><td>TymGiu</td><td>13</td><th></th><td>Tae-Ju</td><td>10</td><th></th><td>TymGiu</td><td>11</td></tr>
+<tr><th>2</th><td>Tae-Ju</td><td>10</td><th></th><td>TymGiu</td><td>10</td><th></th><td>_Jagged_Edge_</td><td>11</td><th></th><td>TymGiu</td><td>10</td><th></th><td>Tae-Ju</td><td>10</td></tr>
+<tr><th>3</th><td>_Jagged_Edge_</td><td>9</td><th></th><td>_Jagged_Edge_</td><td>8</td><th></th><td>Tae-Ju</td><td>6</td><th></th><td>_Jagged_Edge_</td><td>10</td><th></th><td>_Jagged_Edge_</td><td>9</td></tr>
+<tr><th>4</th><td>ClaXus</td><td>0</td><th></th><td>ClaXus</td><td>0</td><th></th><td>ClaXus</td><td>0</td><th></th><td>ClaXus</td><td>0</td><th></th><td>ClaXus</td><td>0</td></tr>
+<tr><th>5</th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td></tr>
+<tr><th>6</th><td>Didier_Raoult</td><td>0</td><th></th><td>Didier_Raoult</td><td>0</td><th></th><td>Didier_Raoult</td><td>0</td><th></th><td>Didier_Raoult</td><td>0</td><th></th><td>Didier_Raoult</td><td>0</td></tr>
+<tr><th>7</th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td></tr>
+<tr><th>8</th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td></tr>
+<tr><th>9</th><td>Gregsto11</td><td>0</td><th></th><td>Gregsto11</td><td>0</td><th></th><td>Gregsto11</td><td>0</td><th></th><td>Gregsto11</td><td>0</td><th></th><td>Gregsto11</td><td>0</td></tr>
+<tr><th>10</th><td>Huey</td><td>0</td><th></th><td>Huey</td><td>0</td><th></th><td>Huey</td><td>0</td><th></th><td>Huey</td><td>0</td><th></th><td>Huey</td><td>0</td></tr>
+<tr><th>11</th><td>Inoubliable-Squall</td><td>0</td><th></th><td>Inoubliable-Squall</td><td>0</td><th></th><td>Inoubliable-Squall</td><td>0</td><th></th><td>Inoubliable-Squall</td><td>0</td><th></th><td>Inoubliable-Squall</td><td>0</td></tr>
+<tr><th>12</th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td></tr>
+<tr><th>13</th><td>Marluxia</td><td>0</td><th></th><td>Marluxia</td><td>0</td><th></th><td>Marluxia</td><td>0</td><th></th><td>Marluxia</td><td>0</td><th></th><td>Marluxia</td><td>0</td></tr>
+<tr><th>14</th><td>Redsox</td><td>0</td><th></th><td>Redsox</td><td>0</td><th></th><td>Redsox</td><td>0</td><th></th><td>Redsox</td><td>0</td><th></th><td>Redsox</td><td>0</td></tr>
+<tr><th>15</th><td>SquonK</td><td>0</td><th></th><td>SquonK</td><td>0</td><th></th><td>SquonK</td><td>0</td><th></th><td>SquonK</td><td>0</td><th></th><td>SquonK</td><td>0</td></tr>
+<tr><th>16</th><td>zlogjzeigfzgjpzeige</td><td>0</td><th></th><td>zlogjzeigfzgjpzeige</td><td>0</td><th></th><td>zlogjzeigfzgjpzeige</td><td>0</td><th></th><td>zlogjzeigfzgjpzeige</td><td>0</td><th></th><td>zlogjzeigfzgjpzeige</td><td>0</td></tr>
 </table>
 
 
@@ -66,9 +66,9 @@
 
 <center><table class="wikitable" border="1" style="text-align: center; width: 40%">
 <tr><th>Position</th><th>Nom</th><th>Points de classement</th></tr>
-<tr><th>1</th><td>TymGiu</td><td>80</td></tr>
-<tr><th>2</th><td>_Jagged_Edge_</td><td>73</td></tr>
-<tr><th>3</th><td>Tae-Ju</td><td>72</td></tr>
+<tr><th>1</th><td>TymGiu</td><td>78</td></tr>
+<tr><th>2</th><td>Tae-Ju</td><td>76</td></tr>
+<tr><th>3</th><td>_Jagged_Edge_</td><td>71</td></tr>
 <tr><th>4</th><td>ClaXus</td><td>65</td></tr>
 <tr><th>5</th><td>Darckzander</td><td>60</td></tr>
 <tr><th>6</th><td>Didier_Raoult</td><td>55</td></tr>
