--- a/w.html
+++ b/w.html
@@ -6,9 +6,9 @@
 <tr><th>Darckzander</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
 <tr><th>Didier_Raoult</th><th>2</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">4</span> <span style="color: orange;">4</span> <span style="color: blue;">7</span> <br><span style="color: darkgreen;">5</span> <span style="color: olive;">5</span> </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">5</span> <span style="color: orange;">6</span> <span style="color: blue;">7</span> <br><span style="color: darkgreen;">5</span> <span style="color: olive;">7</span> </td><td>   <br>  </td><td>   <br>  </td></tr>
 <tr><th>DjaM</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
-<tr><th>f4rmeur_f0u</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
+<tr><th>f4rmeur_f0u</th><th>1</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">4</span> <span style="color: orange;">5</span> <span style="color: blue;">5</span> <br><span style="color: darkgreen;">6</span> <span style="color: olive;">8</span> </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
 <tr><th>Garuda</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
-<tr><th>Gregsto11</th><th>1</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">4</span> <span style="color: orange;">4</span> <span style="color: blue;">5</span> <br><span style="color: darkgreen;">4</span> <span style="color: olive;">3</span> </td><td>   <br>  </td><td>   <br>  </td></tr>
+<tr><th>Gregsto11</th><th>2</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">6</span> <span style="color: orange;">5</span> <span style="color: blue;">5</span> <br><span style="color: darkgreen;">4</span> <span style="color: olive;">2</span> </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">4</span> <span style="color: orange;">4</span> <span style="color: blue;">5</span> <br><span style="color: darkgreen;">4</span> <span style="color: olive;">3</span> </td><td>   <br>  </td><td>   <br>  </td></tr>
 <tr><th>Huey</th><th>2</th><td><span style="color: red;">6</span> <span style="color: orange;">6</span> <span style="color: blue;">6</span> <br><span style="color: darkgreen;">5</span> <span style="color: olive;">5</span> </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td><span style="color: red;">5</span> <span style="color: orange;">7</span> <span style="color: blue;">5</span> <br><span style="color: darkgreen;">6</span> <span style="color: olive;">5</span> </td><td>   <br>  </td></tr>
 <tr><th>juju777</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
 <tr><th>Locke</th><th>0</th><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td><td>   <br>  </td></tr>
@@ -37,16 +37,16 @@
 <tr><th>1</th><td>TymGiu</td><td>30</td><th></th><td>TymGiu</td><td>30</td><th></th><td>TymGiu</td><td>31</td><th></th><td>TymGiu</td><td>29</td><th></th><td>TymGiu</td><td>33</td></tr>
 <tr><th>2</th><td>zlogjzeigfzgjpzeige</td><td>12</td><th></th><td>Huey</td><td>13</td><th></th><td>Didier_Raoult</td><td>14</td><th></th><td>Huey</td><td>11</td><th></th><td>Didier_Raoult</td><td>12</td></tr>
 <tr><th>3</th><td>Huey</td><td>11</td><th></th><td>Tae-Ju</td><td>12</td><th></th><td>Huey</td><td>11</td><th></th><td>zlogjzeigfzgjpzeige</td><td>11</td><th></th><td>Huey</td><td>10</td></tr>
-<tr><th>4</th><td>Tae-Ju</td><td>10</td><th></th><td>Didier_Raoult</td><td>10</td><th></th><td>_Jagged_Edge_</td><td>11</td><th></th><td>Didier_Raoult</td><td>10</td><th></th><td>Tae-Ju</td><td>10</td></tr>
-<tr><th>5</th><td>Didier_Raoult</td><td>9</td><th></th><td>zlogjzeigfzgjpzeige</td><td>8</td><th></th><td>zlogjzeigfzgjpzeige</td><td>10</td><th></th><td>Tae-Ju</td><td>10</td><th></th><td>zlogjzeigfzgjpzeige</td><td>10</td></tr>
-<tr><th>6</th><td>_Jagged_Edge_</td><td>9</td><th></th><td>_Jagged_Edge_</td><td>8</td><th></th><td>Tae-Ju</td><td>6</td><th></th><td>_Jagged_Edge_</td><td>10</td><th></th><td>_Jagged_Edge_</td><td>9</td></tr>
-<tr><th>7</th><td>Redsox</td><td>6</td><th></th><td>Redsox</td><td>6</td><th></th><td>Gregsto11</td><td>5</td><th></th><td>ClaXus</td><td>5</td><th></th><td>ClaXus</td><td>5</td></tr>
-<tr><th>8</th><td>Sweeney</td><td>5</td><th></th><td>Sweeney</td><td>5</td><th></th><td>Sweeney</td><td>5</td><th></th><td>Redsox</td><td>5</td><th></th><td>Redsox</td><td>5</td></tr>
-<tr><th>9</th><td>ClaXus</td><td>4</td><th></th><td>ClaXus</td><td>4</td><th></th><td>ClaXus</td><td>4</td><th></th><td>Sweeney</td><td>5</td><th></th><td>Gregsto11</td><td>3</td></tr>
-<tr><th>10</th><td>Gregsto11</td><td>4</td><th></th><td>Gregsto11</td><td>4</td><th></th><td>Redsox</td><td>3</td><th></th><td>Gregsto11</td><td>4</td><th></th><td>Sweeney</td><td>3</td></tr>
-<tr><th>11</th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td></tr>
-<tr><th>12</th><td>DjaM</td><td>0</td><th></th><td>DjaM</td><td>0</td><th></th><td>DjaM</td><td>0</td><th></th><td>DjaM</td><td>0</td><th></th><td>DjaM</td><td>0</td></tr>
-<tr><th>13</th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td><th></th><td>f4rmeur_f0u</td><td>0</td></tr>
+<tr><th>4</th><td>Gregsto11</td><td>10</td><th></th><td>Didier_Raoult</td><td>10</td><th></th><td>_Jagged_Edge_</td><td>11</td><th></th><td>Didier_Raoult</td><td>10</td><th></th><td>Tae-Ju</td><td>10</td></tr>
+<tr><th>5</th><td>Tae-Ju</td><td>10</td><th></th><td>Gregsto11</td><td>9</td><th></th><td>Gregsto11</td><td>10</td><th></th><td>Tae-Ju</td><td>10</td><th></th><td>zlogjzeigfzgjpzeige</td><td>10</td></tr>
+<tr><th>6</th><td>Didier_Raoult</td><td>9</td><th></th><td>zlogjzeigfzgjpzeige</td><td>8</td><th></th><td>zlogjzeigfzgjpzeige</td><td>10</td><th></th><td>_Jagged_Edge_</td><td>10</td><th></th><td>_Jagged_Edge_</td><td>9</td></tr>
+<tr><th>7</th><td>_Jagged_Edge_</td><td>9</td><th></th><td>_Jagged_Edge_</td><td>8</td><th></th><td>Tae-Ju</td><td>6</td><th></th><td>Gregsto11</td><td>8</td><th></th><td>f4rmeur_f0u</td><td>8</td></tr>
+<tr><th>8</th><td>Redsox</td><td>6</td><th></th><td>Redsox</td><td>6</td><th></th><td>f4rmeur_f0u</td><td>5</td><th></th><td>f4rmeur_f0u</td><td>6</td><th></th><td>Gregsto11</td><td>5</td></tr>
+<tr><th>9</th><td>Sweeney</td><td>5</td><th></th><td>f4rmeur_f0u</td><td>5</td><th></th><td>Sweeney</td><td>5</td><th></th><td>ClaXus</td><td>5</td><th></th><td>ClaXus</td><td>5</td></tr>
+<tr><th>10</th><td>ClaXus</td><td>4</td><th></th><td>Sweeney</td><td>5</td><th></th><td>ClaXus</td><td>4</td><th></th><td>Redsox</td><td>5</td><th></th><td>Redsox</td><td>5</td></tr>
+<tr><th>11</th><td>f4rmeur_f0u</td><td>4</td><th></th><td>ClaXus</td><td>4</td><th></th><td>Redsox</td><td>3</td><th></th><td>Sweeney</td><td>5</td><th></th><td>Sweeney</td><td>3</td></tr>
+<tr><th>12</th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td><th></th><td>Darckzander</td><td>0</td></tr>
+<tr><th>13</th><td>DjaM</td><td>0</td><th></th><td>DjaM</td><td>0</td><th></th><td>DjaM</td><td>0</td><th></th><td>DjaM</td><td>0</td><th></th><td>DjaM</td><td>0</td></tr>
 <tr><th>14</th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td><th></th><td>Garuda</td><td>0</td></tr>
 <tr><th>15</th><td>juju777</td><td>0</td><th></th><td>juju777</td><td>0</td><th></th><td>juju777</td><td>0</td><th></th><td>juju777</td><td>0</td><th></th><td>juju777</td><td>0</td></tr>
 <tr><th>16</th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td><th></th><td>Locke</td><td>0</td></tr>
@@ -72,17 +72,17 @@
 <tr><th>Position</th><th>Nom</th><th>Points de classement</th></tr>
 <tr><th>1</th><td>TymGiu</td><td>90</td></tr>
 <tr><th>2</th><td>Huey</td><td>82</td></tr>
-<tr><th>3</th><td>Didier_Raoult</td><td>78</td></tr>
-<tr><th>4</th><td>zlogjzeigfzgjpzeige</td><td>75</td></tr>
-<tr><th>5</th><td>Tae-Ju</td><td>73</td></tr>
-<tr><th>6</th><td>_Jagged_Edge_</td><td>67</td></tr>
-<tr><th>7</th><td>Redsox</td><td>55</td></tr>
-<tr><th>8</th><td>ClaXus</td><td>54</td></tr>
-<tr><th>9</th><td>Sweeney</td><td>52</td></tr>
-<tr><th>10</th><td>Gregsto11</td><td>49</td></tr>
-<tr><th>11</th><td>Darckzander</td><td>40</td></tr>
-<tr><th>12</th><td>DjaM</td><td>35</td></tr>
-<tr><th>13</th><td>f4rmeur_f0u</td><td>30</td></tr>
+<tr><th>3</th><td>Didier_Raoult</td><td>77</td></tr>
+<tr><th>4</th><td>zlogjzeigfzgjpzeige</td><td>73</td></tr>
+<tr><th>5</th><td>Tae-Ju</td><td>71</td></tr>
+<tr><th>6</th><td>Gregsto11</td><td>66</td></tr>
+<tr><th>7</th><td>_Jagged_Edge_</td><td>65</td></tr>
+<tr><th>8</th><td>f4rmeur_f0u</td><td>52</td></tr>
+<tr><th>9</th><td>Redsox</td><td>48</td></tr>
+<tr><th>10</th><td>ClaXus</td><td>46</td></tr>
+<tr><th>11</th><td>Sweeney</td><td>45</td></tr>
+<tr><th>12</th><td>Darckzander</td><td>35</td></tr>
+<tr><th>13</th><td>DjaM</td><td>30</td></tr>
 <tr><th>14</th><td>Garuda</td><td>25</td></tr>
 <tr><th>15</th><td>juju777</td><td>20</td></tr>
 <tr><th>16</th><td>Locke</td><td>15</td></tr>
