--- a/w.html
+++ b/w.html
@@ -32,26 +32,26 @@
 
 
 <table class="wikitable" border="1" style="text-align: center; width: 100%">
-<tr><th></th><th colspan=2>+ = alea</th><th></th><th colspan=2>mm ma elem</th><th></th><th colspan=2>mp + = alea</th><th></th><th colspan=2>mp bat</th><th></th><th colspan=2>mkc elem bat</th></tr>
-<tr><th>#</th><th>Joueur</th><th>Points</th><th></th><th>Joueur</th><th>Points</th><th></th><th>Joueur</th><th>Points</th><th></th><th>Joueur</th><th>Points</th><th></th><th>Joueur</th><th>Points</th></tr>
-<tr><th>1</th><td>TymGiu</td><td>77</td><th></th><td>Huey</td><td>81</td><th></th><td>Huey</td><td>83</td><th></th><td>Huey</td><td>79</td><th></th><td>TymGiu</td><td>83</td></tr>
-<tr><th>2</th><td>Huey</td><td>66</td><th></th><td>TymGiu</td><td>75</td><th></th><td>TymGiu</td><td>78</td><th></th><td>TymGiu</td><td>76</td><th></th><td>Huey</td><td>77</td></tr>
-<tr><th>3</th><td>SquonK</td><td>56</td><th></th><td>SquonK</td><td>61</td><th></th><td>SquonK</td><td>67</td><th></th><td>SquonK</td><td>59</td><th></th><td>SquonK</td><td>59</td></tr>
-<tr><th>4</th><td>Redsox</td><td>54</td><th></th><td>juju777</td><td>55</td><th></th><td>juju777</td><td>58</td><th></th><td>juju777</td><td>51</td><th></th><td>juju777</td><td>53</td></tr>
-<tr><th>5</th><td>juju777</td><td>52</td><th></th><td>f4rmeur_f0u</td><td>50</td><th></th><td>Redsox</td><td>53</td><th></th><td>Tae-Ju</td><td>49</td><th></th><td>Tae-Ju</td><td>51</td></tr>
-<tr><th>6</th><td>Tae-Ju</td><td>48</td><th></th><td>Tae-Ju</td><td>49</td><th></th><td>f4rmeur_f0u</td><td>46</td><th></th><td>f4rmeur_f0u</td><td>49</td><th></th><td>f4rmeur_f0u</td><td>50</td></tr>
-<tr><th>7</th><td>f4rmeur_f0u</td><td>45</td><th></th><td>Redsox</td><td>49</td><th></th><td>Tae-Ju</td><td>43</td><th></th><td>Redsox</td><td>48</td><th></th><td>Redsox</td><td>47</td></tr>
-<tr><th>8</th><td>Gregsto11</td><td>45</td><th></th><td>Darckzander</td><td>35</td><th></th><td>Gregsto11</td><td>39</td><th></th><td>Gregsto11</td><td>32</td><th></th><td>Gregsto11</td><td>33</td></tr>
-<tr><th>9</th><td>ClaXus</td><td>32</td><th></th><td>Didier_Raoult</td><td>30</td><th></th><td>Didier_Raoult</td><td>31</td><th></th><td>Locke</td><td>31</td><th></th><td>Locke</td><td>28</td></tr>
-<tr><th>10</th><td>Locke</td><td>28</td><th></th><td>Gregsto11</td><td>28</td><th></th><td>Locke</td><td>26</td><th></th><td>_Jagged_Edge_</td><td>29</td><th></th><td>ClaXus</td><td>27</td></tr>
-<tr><th>11</th><td>Didier_Raoult</td><td>25</td><th></th><td>_Jagged_Edge_</td><td>25</td><th></th><td>_Jagged_Edge_</td><td>26</td><th></th><td>Darckzander</td><td>28</td><th></th><td>Didier_Raoult</td><td>26</td></tr>
-<tr><th>12</th><td>_Jagged_Edge_</td><td>25</td><th></th><td>Locke</td><td>22</td><th></th><td>Darckzander</td><td>23</td><th></th><td>ClaXus</td><td>25</td><th></th><td>_Jagged_Edge_</td><td>25</td></tr>
-<tr><th>13</th><td>Darckzander</td><td>24</td><th></th><td>ClaXus</td><td>22</td><th></th><td>ClaXus</td><td>22</td><th></th><td>Didier_Raoult</td><td>24</td><th></th><td>Darckzander</td><td>22</td></tr>
-<tr><th>14</th><td>Marluxia</td><td>18</td><th></th><td>Marluxia</td><td>13</td><th></th><td>zlogjzeigfzgjpzeige</td><td>12</td><th></th><td>Marluxia</td><td>16</td><th></th><td>zlogjzeigfzgjpzeige</td><td>16</td></tr>
-<tr><th>15</th><td>zlogjzeigfzgjpzeige</td><td>17</td><th></th><td>zlogjzeigfzgjpzeige</td><td>13</td><th></th><td>Marluxia</td><td>8</td><th></th><td>zlogjzeigfzgjpzeige</td><td>15</td><th></th><td>Marluxia</td><td>15</td></tr>
-<tr><th>16</th><td>Garuda</td><td>9</td><th></th><td>Garuda</td><td>12</td><th></th><td>Garuda</td><td>6</td><th></th><td>Garuda</td><td>10</td><th></th><td>Garuda</td><td>9</td></tr>
-<tr><th>17</th><td>Sweeney</td><td>5</td><th></th><td>DjaM</td><td>5</td><th></th><td>Sweeney</td><td>5</td><th></th><td>Sweeney</td><td>5</td><th></th><td>DjaM</td><td>6</td></tr>
-<tr><th>18</th><td>DjaM</td><td>4</td><th></th><td>Sweeney</td><td>5</td><th></th><td>DjaM</td><td>4</td><th></th><td>DjaM</td><td>4</td><th></th><td>Sweeney</td><td>3</td></tr>
+<tr><th></th><th colspan=3>+ = alea</th><th></th><th colspan=3>mm ma elem</th><th></th><th colspan=3>mp + = alea</th><th></th><th colspan=3>mp bat</th><th></th><th colspan=3>mkc elem bat</th></tr>
+<tr><th>#</th><th>Joueur</th><th>Points</th><th>Moy</th><th></th><th>Joueur</th><th>Points</th><th>Moy</th><th></th><th>Joueur</th><th>Points</th><th>Moy</th><th></th><th>Joueur</th><th>Points</th><th>Moy</th><th></th><th>Joueur</th><th>Points</th><th>Moy</th></tr>
+<tr><th>1</th><td>TymGiu</td><td>77</td><td>5.1</td><th></th><td>Huey</td><td>81</td><td>5.4</td><th></th><td>Huey</td><td>83</td><td>5.5</td><th></th><td>Huey</td><td>79</td><td>5.3</td><th></th><td>TymGiu</td><td>83</td><td>5.5</td></tr>
+<tr><th>2</th><td>Huey</td><td>66</td><td>4.4</td><th></th><td>TymGiu</td><td>75</td><td>5.0</td><th></th><td>TymGiu</td><td>78</td><td>5.2</td><th></th><td>TymGiu</td><td>76</td><td>5.1</td><th></th><td>Huey</td><td>77</td><td>5.1</td></tr>
+<tr><th>3</th><td>SquonK</td><td>56</td><td>5.1</td><th></th><td>SquonK</td><td>61</td><td>5.5</td><th></th><td>SquonK</td><td>67</td><td>6.1</td><th></th><td>SquonK</td><td>59</td><td>5.4</td><th></th><td>SquonK</td><td>59</td><td>5.4</td></tr>
+<tr><th>4</th><td>Redsox</td><td>54</td><td>6.0</td><th></th><td>juju777</td><td>55</td><td>5.0</td><th></th><td>juju777</td><td>58</td><td>5.3</td><th></th><td>juju777</td><td>51</td><td>4.6</td><th></th><td>juju777</td><td>53</td><td>4.8</td></tr>
+<tr><th>5</th><td>juju777</td><td>52</td><td>4.7</td><th></th><td>f4rmeur_f0u</td><td>50</td><td>5.6</td><th></th><td>Redsox</td><td>53</td><td>5.9</td><th></th><td>Tae-Ju</td><td>49</td><td>4.9</td><th></th><td>Tae-Ju</td><td>51</td><td>5.1</td></tr>
+<tr><th>6</th><td>Tae-Ju</td><td>48</td><td>4.8</td><th></th><td>Tae-Ju</td><td>49</td><td>4.9</td><th></th><td>f4rmeur_f0u</td><td>46</td><td>5.1</td><th></th><td>f4rmeur_f0u</td><td>49</td><td>5.4</td><th></th><td>f4rmeur_f0u</td><td>50</td><td>5.6</td></tr>
+<tr><th>7</th><td>f4rmeur_f0u</td><td>45</td><td>5.0</td><th></th><td>Redsox</td><td>49</td><td>5.4</td><th></th><td>Tae-Ju</td><td>43</td><td>4.3</td><th></th><td>Redsox</td><td>48</td><td>5.3</td><th></th><td>Redsox</td><td>47</td><td>5.2</td></tr>
+<tr><th>8</th><td>Gregsto11</td><td>45</td><td>5.0</td><th></th><td>Darckzander</td><td>35</td><td>5.8</td><th></th><td>Gregsto11</td><td>39</td><td>4.3</td><th></th><td>Gregsto11</td><td>32</td><td>3.6</td><th></th><td>Gregsto11</td><td>33</td><td>3.7</td></tr>
+<tr><th>9</th><td>ClaXus</td><td>32</td><td>6.4</td><th></th><td>Didier_Raoult</td><td>30</td><td>6.0</td><th></th><td>Didier_Raoult</td><td>31</td><td>6.2</td><th></th><td>Locke</td><td>31</td><td>5.2</td><th></th><td>Locke</td><td>28</td><td>4.7</td></tr>
+<tr><th>10</th><td>Locke</td><td>28</td><td>4.7</td><th></th><td>Gregsto11</td><td>28</td><td>3.1</td><th></th><td>Locke</td><td>26</td><td>4.3</td><th></th><td>_Jagged_Edge_</td><td>29</td><td>5.8</td><th></th><td>ClaXus</td><td>27</td><td>5.4</td></tr>
+<tr><th>11</th><td>Didier_Raoult</td><td>25</td><td>5.0</td><th></th><td>_Jagged_Edge_</td><td>25</td><td>5.0</td><th></th><td>_Jagged_Edge_</td><td>26</td><td>5.2</td><th></th><td>Darckzander</td><td>28</td><td>4.7</td><th></th><td>Didier_Raoult</td><td>26</td><td>5.2</td></tr>
+<tr><th>12</th><td>_Jagged_Edge_</td><td>25</td><td>5.0</td><th></th><td>Locke</td><td>22</td><td>3.7</td><th></th><td>Darckzander</td><td>23</td><td>3.8</td><th></th><td>ClaXus</td><td>25</td><td>5.0</td><th></th><td>_Jagged_Edge_</td><td>25</td><td>5.0</td></tr>
+<tr><th>13</th><td>Darckzander</td><td>24</td><td>4.0</td><th></th><td>ClaXus</td><td>22</td><td>4.4</td><th></th><td>ClaXus</td><td>22</td><td>4.4</td><th></th><td>Didier_Raoult</td><td>24</td><td>4.8</td><th></th><td>Darckzander</td><td>22</td><td>3.7</td></tr>
+<tr><th>14</th><td>Marluxia</td><td>18</td><td>6.0</td><th></th><td>Marluxia</td><td>13</td><td>4.3</td><th></th><td>zlogjzeigfzgjpzeige</td><td>12</td><td>4.0</td><th></th><td>Marluxia</td><td>16</td><td>5.3</td><th></th><td>zlogjzeigfzgjpzeige</td><td>16</td><td>5.3</td></tr>
+<tr><th>15</th><td>zlogjzeigfzgjpzeige</td><td>17</td><td>5.7</td><th></th><td>zlogjzeigfzgjpzeige</td><td>13</td><td>4.3</td><th></th><td>Marluxia</td><td>8</td><td>2.7</td><th></th><td>zlogjzeigfzgjpzeige</td><td>15</td><td>5.0</td><th></th><td>Marluxia</td><td>15</td><td>5.0</td></tr>
+<tr><th>16</th><td>Garuda</td><td>9</td><td>4.5</td><th></th><td>Garuda</td><td>12</td><td>6.0</td><th></th><td>Garuda</td><td>6</td><td>3.0</td><th></th><td>Garuda</td><td>10</td><td>5.0</td><th></th><td>Garuda</td><td>9</td><td>4.5</td></tr>
+<tr><th>17</th><td>Sweeney</td><td>5</td><td>5.0</td><th></th><td>DjaM</td><td>5</td><td>5.0</td><th></th><td>Sweeney</td><td>5</td><td>5.0</td><th></th><td>Sweeney</td><td>5</td><td>5.0</td><th></th><td>DjaM</td><td>6</td><td>6.0</td></tr>
+<tr><th>18</th><td>DjaM</td><td>4</td><td>4.0</td><th></th><td>Sweeney</td><td>5</td><td>5.0</td><th></th><td>DjaM</td><td>4</td><td>4.0</td><th></th><td>DjaM</td><td>4</td><td>4.0</td><th></th><td>Sweeney</td><td>3</td><td>3.0</td></tr>
 </table>
 
 
